--- a/WebClient/src/components/commonComponents/addressPopupComponent/addressPopupComponent.template.html
+++ b/WebClient/src/components/commonComponents/addressPopupComponent/addressPopupComponent.template.html
@@ -1,4 +1,4 @@
-<div class="modal" data-backdrop="static" role="dialog" id="addAddressPopup" style="top: -30em;">
+<div class="modal custom-model-style" data-backdrop="static" role="dialog" id="addAddressPopup" style="top: -30em;">
     <div class="modal-dialog" v-if="address">
         <div class="modal-content">
             <div class="modal-header">
