--- a/WebClient/src/components/services/purchaseService/purchaseService.template.html
+++ b/WebClient/src/components/services/purchaseService/purchaseService.template.html
@@ -18,7 +18,7 @@
                                     data-dismiss="modal">
                                     &times;
                                 </button>
-                                <h4>Add Vechile Details</h4>
+                                <h4>Add Vehicle Details</h4>
                             </div>
 
                             <div class="modal-body">
@@ -153,6 +153,7 @@
                                 height="120" width="120"> -->
                             <div class="add-new">
                                 <!-- <a href="javascript:void(0)">Add New Vehicle</a> -->
+                                +
                             </div>
                             <p class="bold" style="text-align: center;">Add Vehicle</p>
                         </div>
