--- a/WebClient/src/components/myaccount/vehicleAddComponent/vehicleAddComponent.template.html
+++ b/WebClient/src/components/myaccount/vehicleAddComponent/vehicleAddComponent.template.html
@@ -1,4 +1,4 @@
-<div class="modal" data-backdrop="static" role="dialog" id="newVehicleDetailsPopup">
+<div class="modal custom-model-style" data-backdrop="static" role="dialog" id="newVehicleDetailsPopup">
     <div class="modal-dialog" v-if="newVehicleDetails">
         <div class="modal-content">
             <div class="modal-header">
@@ -6,7 +6,7 @@
                     data-dismiss="modal" @click="cancel">
                     &times;
                 </button>
-                <h4>Add Vechile Details</h4>
+                <h4>Add Vehicle Details</h4>
             </div>
 
             <div class="modal-body">
