--- a/WebClient/src/components/userProfilePanel/userProfilePanel.template.html
+++ b/WebClient/src/components/userProfilePanel/userProfilePanel.template.html
@@ -6,12 +6,9 @@
             <span class="iconUser" v-if="!userProfile.ProfileImage"><i class="far fa-user"></i></span>
         </div>
         <div class="row">
-            <div class="cold-md-12 profile-name-ed" style="text-align: center; font-size:24px;">
+            <div class="cold-md-12 flxxx-tm" style="text-align: center; font-size:24px;">
                 <div>
-                <label class="name" style="font-size: 24px;margin-bottom: 0px">{{userProfile.UserFirstName}}</label>
-            </div>
-            <div>
-                <label class="name" style="font-size: 24px; margin-bottom: 0px">{{userProfile.UserLastName}}</label>
+                <label class="name" style="font-size: 24px;margin-bottom: 0px; margin-right:10px">{{userProfile.UserFirstName}} {{userProfile.UserLastName}}</label>
             </div>
             </div>
         </div>
