--- a/WebClient/src/content/scssStyles.scss
+++ b/WebClient/src/content/scssStyles.scss
@@ -10671,6 +10671,22 @@ h4{
         color: #4d70e0;
     }
 }
+.activeSelected{
+    box-shadow: 0px 0px 5px $headerColor !important;
+    border:2px solid $headerColor;
+}
+.custom-bbtn{
+    width: 120px;
+    border: 1px solid $headerColor;
+    padding: 5px;
+    background: white;
+    border-radius: 5px;
+}
+.flxxx-tm{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
 .profile-name-ed{
     display: flex;
     justify-content: center;
