--- a/WebClient/src/components/commonComponents/addressChooseComponent/addressChooseComponent.template.html
+++ b/WebClient/src/components/commonComponents/addressChooseComponent/addressChooseComponent.template.html
@@ -1,4 +1,4 @@
-<div class="modal custom-model-style" data-backdrop="static" role="dialog" id="chooseAddressPopup" style="top: -30em;">
+<div class="modal custom-model-style" data-backdrop="static" role="dialog" id="chooseAddressPopup">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
