--- a/WebClient/src/components/commonComponents/historyPopupComponent/historyPopupComponent.template.html
+++ b/WebClient/src/components/commonComponents/historyPopupComponent/historyPopupComponent.template.html
@@ -1,4 +1,4 @@
-<div class="modal custom-model-style" data-backdrop="static" role="dialog" id="historyComponentPopup" style="top: -5em;">
+<div class="modal custom-model-style" data-backdrop="static" role="dialog" id="historyComponentPopup">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
