--- a/WebClient/src/components/myaccount/myOrders/myOrders.template.html
+++ b/WebClient/src/components/myaccount/myOrders/myOrders.template.html
@@ -31,7 +31,7 @@
                                     <th>Service Date</th>
                                     <th>Service</th>
                                     <th>Product Name</th>
-                                    <th>Subscription</th>
+                                    <th>Frequency</th>
                                     <th>Quantity</th>
                                     <th>Amount</th>
                                     <th>Status</th>
