--- a/WebClient/src/components/myaccount/myWallet/myWallet.template.html
+++ b/WebClient/src/components/myaccount/myWallet/myWallet.template.html
@@ -8,7 +8,7 @@
                 <thead>
                     <th>Transaction Date</th>
                     <th>Amount</th>
-                    <th>Credit/Debit</th>
+                    <th>Credit/Withdraw</th>
                     <th>Transaction Type</th>                    
                 </thead>
                 <tbody class="myordersTable">
