--- a/WebClient/src/components/customerModule/supportComponent/supportComponent.template.html
+++ b/WebClient/src/components/customerModule/supportComponent/supportComponent.template.html
@@ -5,19 +5,19 @@
 
             <div class="col-md-12">
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-md-12" style="padding-top:0px;">
                         <h5 class="mt-2">Support</h5>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-12">
-                        <div class="form-group">
+                    <div class="col-md-12"  style="padding-top:0px;">
+                        <div>
                             <label>Name:</label>
                             <input class="form-control" type="text" v-model="feedback.Name">
                         </div>
                     </div>
                     <div class="col-md-12">
-                        <div class="form-group">
+                        <div>
                             <label>Email:</label>
                             <input class="form-control" type="text" v-model="feedback.Email" autocomplete="off"
                                 name="Email" v-validate="'required'"
@@ -27,7 +27,7 @@
                         </div>
                     </div>
                     <div class="col-md-12">
-                        <div class="form-group">
+                        <div>
                             <label>Mobile Number:</label>
                             <input class="form-control" type="text" v-model="feedback.MobileNumber" name="MobileNumber"
                                 v-validate="'required'"
