--- a/WebClient/src/components/homeModule/homePageComponent/homePageComponent.template.html
+++ b/WebClient/src/components/homeModule/homePageComponent/homePageComponent.template.html
@@ -81,8 +81,8 @@
                                     class="serviceCardImg" @click="showMoreInfo(service)" height="auto">
                             </div>
                             <div class="serviceName serv-pad">
-                                <p class="mt-3 inerhtml" style="font-weight: 500;">{{service.ServiceName}}<br></p>
-                                <span class="mt-3" style="font-weight: 500;">Starting from ₹
+                                <p class="mt-3 inerhtml bold" style="font-size: 16px;">{{service.ServiceName}}<br></p>
+                                <span class="mt-3" style="font-weight: 500; font-size: 15px">Starting from ₹
                                     {{service.StartingPrice ? service.StartingPrice : service.Price}}/-</span>
                             </div>
                         </div>
@@ -121,8 +121,8 @@
                                         class="serviceCardImg" @click="showMoreInfo(service)" height="auto">
                                 </div>
                                 <div class="serviceName serv-pad">
-                                    <p class="mt-3 inerhtml" style="font-weight: 500;">{{service.ServiceName}}<br></p>
-                                    <span class="mt-3" style="font-weight: 500;">Starting from ₹
+                                    <p class="mt-3 inerhtml bold" style="font-size: 16px;">{{service.ServiceName}}<br></p>
+                                    <span class="mt-3" style="font-weight: 500; font-size: 15px">Starting from ₹
                                         {{service.StartingPrice ? service.StartingPrice : service.Price}}/-</span>
                                 </div>
                             </div>
