--- a/WebClient/src/components/homeModule/homePageComponent/homePageComponent.template.html
+++ b/WebClient/src/components/homeModule/homePageComponent/homePageComponent.template.html
@@ -64,6 +64,7 @@
                         <input type="text" placeholder="Search Services..." class="form-control" v-model="SearchText">
                     </div>
                     <div class="col-md-6">
+                        <i @click="getAllServices" class="fa fa-search"></i>
                         <label> <a href="javascript:void(0)" @click="getAllServices">Show All</a></label>
                     </div>
                 </div>
