--- a/WebClient/src/components/myaccount/myProducts/myProducts.template.html
+++ b/WebClient/src/components/myaccount/myProducts/myProducts.template.html
@@ -78,10 +78,10 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <button type="button" class="close close-btn" 
+                    <!-- <button type="button" class="close close-btn" 
                     data-dismiss="modal" @click="cancel">
                     &times;
-                </button>
+                </button> -->
                     <h4>Confirmation</h4>
                 </div>
 
