--- a/WebClient/src/content/scssStyles.scss
+++ b/WebClient/src/content/scssStyles.scss
@@ -12786,12 +12786,16 @@ body {
   .purchaseButton{
       padding: 5px;
       color: white;
+      box-shadow: 0px 0px 5px black;
       font-style: italic;
       font-size: 13px;
       cursor: pointer;
       border-radius: 3px;
-      margin-bottom: 5px;
+      margin-bottom: 7px;
       background: $headerColor;
+  }
+  .fa-search{
+      color:$headerColor;
   }
 
 //   .serviceName{
@@ -12956,15 +12960,31 @@ body {
 }
 
 a{
-    color:$headerColor ;
-    text-decoration:underline ;
-    text-decoration-color: $headerColor;
+    color:$headerColor  !important;
+    text-decoration:underline  !important;
+    text-decoration-color: $headerColor !important;
    
 }
 .clrbtn{
     a{
     color:#FFF !important;
     }
+}
+.edit-profile{
+    input{
+        border:1px solid $headerColor;
+        border-radius: 5px;
+        margin-bottom:5px;
+        margin-left: 9px;
+        padding-left: 5px;
+    }
+}
+.edit-input{
+    border:1px solid $headerColor;
+    border-radius: 5px;
+    margin-bottom:5px;
+    margin-left: 9px;
+    padding-left: 5px;
 }
 
 * {box-sizing:border-box}
@@ -13177,6 +13197,7 @@ a{
             // height: 125px;
             width:100%;
             border-radius: 10px;
+            height: 85px;
         }
         .inerhtml{
             margin: 0px;
