--- a/WebClient/src/components/commonComponents/toastrMessageComponent/toastrMessageComponent.template.html
+++ b/WebClient/src/components/commonComponents/toastrMessageComponent/toastrMessageComponent.template.html
@@ -1,5 +1,4 @@
-<div class="modal custom-model-style" data-backdrop="static" role="dialog" id="toastrMessagePopup" style="top: -20em;">
-<!-- <div class="modal custom-model-style" data-backdrop="static" role="dialog" id="toastrMessagePopup"> -->
+<div class="modal custom-model-style" data-backdrop="static" role="dialog" id="toastrMessagePopup">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
